[gd_scene load_steps=6 format=3]

[ext_resource type="Script" path="res://scripts/GameTable.gd" id="1"]
[ext_resource type="PackedScene" path="res://scenes/DiceSlot.tscn" id="2"]
[ext_resource type="PackedScene" path="res://scenes/ScorecardPanel.tscn" id="3"]
[ext_resource type="Script" path="res://scripts/DebugPanel.gd" id="4"]

[node name="GameTable" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.91, 0.52, 0.45, 1)

[node name="MainVBox" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = 12.0
offset_right = -16.0
offset_bottom = -12.0
theme_override_constants/separation = 12

[node name="TopBar" type="HBoxContainer" parent="MainVBox"]
layout_mode = 2
size_flags_vertical = 0

[node name="TurnIndicator" type="PanelContainer" parent="MainVBox/TopBar"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0

[node name="HBox" type="HBoxContainer" parent="MainVBox/TopBar/TurnIndicator"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="RollsLabel" type="Label" parent="MainVBox/TopBar/TurnIndicator/HBox"]
unique_name_in_owner = true
layout_mode = 2
text = "12"

[node name="RoomCodeLabel" type="Label" parent="MainVBox/TopBar"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Room: ABC123"
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="MainVBox/TopBar"]
layout_mode = 2
size_flags_horizontal = 3

[node name="LeaveButton" type="Button" parent="MainVBox/TopBar"]
unique_name_in_owner = true
layout_mode = 2
text = "X"

[node name="CenterArea" type="HBoxContainer" parent="MainVBox"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 16
alignment = 1

[node name="LeftSpacer" type="Control" parent="MainVBox/CenterArea"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ScorecardContainer" type="Control" parent="MainVBox/CenterArea"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 3

[node name="RightPanel" type="VBoxContainer" parent="MainVBox/CenterArea"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 8

[node name="PlayersLabel" type="Label" parent="MainVBox/CenterArea/RightPanel"]
layout_mode = 2
text = "Players"

[node name="PlayersList" type="ItemList" parent="MainVBox/CenterArea/RightPanel"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="RightSpacer" type="Control" parent="MainVBox/CenterArea"]
layout_mode = 2
size_flags_horizontal = 3

[node name="BottomArea" type="VBoxContainer" parent="MainVBox"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/separation = 8
alignment = 1

[node name="DiceRow" type="HBoxContainer" parent="MainVBox/BottomArea"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 12
alignment = 1

[node name="ButtonsRow" type="HBoxContainer" parent="MainVBox/BottomArea"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 16
alignment = 1

[node name="EndTurnButton" type="Button" parent="MainVBox/BottomArea/ButtonsRow"]
unique_name_in_owner = true
layout_mode = 2
text = "X"

[node name="RollCountLabel" type="Label" parent="MainVBox/BottomArea/ButtonsRow"]
unique_name_in_owner = true
layout_mode = 2
text = "0"

[node name="RollButton" type="Button" parent="MainVBox/BottomArea/ButtonsRow"]
unique_name_in_owner = true
layout_mode = 2
text = "ROLL"

[node name="InfoLog" type="RichTextLabel" parent="MainVBox"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_vertical = 0
custom_minimum_size = Vector2(0, 60)
scroll_following = true

[node name="ModeLabel" type="Label" parent="."]
unique_name_in_owner = true
visible = false
text = "Mode"

[node name="RoomLabel" type="Label" parent="."]
unique_name_in_owner = true
visible = false
text = "Room"

[node name="CurrentPlayerLabel" type="Label" parent="."]
unique_name_in_owner = true
visible = false
text = "Current:"

[node name="DebugPanel" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
z_index = 100
script = ExtResource("4")
visible = false
mouse_filter = 0

[node name="Panel" type="PanelContainer" parent="DebugPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0

[node name="VBox" type="VBoxContainer" parent="DebugPanel/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 12.0
offset_top = 12.0
offset_right = -12.0
offset_bottom = -12.0
theme_override_constants/separation = 8

[node name="InfoLabel" type="Label" parent="DebugPanel/Panel/VBox"]
layout_mode = 2
text = "Debug Panel"
horizontal_alignment = 1

[node name="FilterButtons" type="HBoxContainer" parent="DebugPanel/Panel/VBox"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="LogDisplay" type="RichTextLabel" parent="DebugPanel/Panel/VBox"]
layout_mode = 2
size_flags_vertical = 3
custom_minimum_size = Vector2(0, 300)
bbcode_enabled = true
scroll_following = true

[node name="Buttons" type="HBoxContainer" parent="DebugPanel/Panel/VBox"]
layout_mode = 2
alignment = 1
theme_override_constants/separation = 8

[node name="ClearButton" type="Button" parent="DebugPanel/Panel/VBox/Buttons"]
layout_mode = 2
text = "Clear"

[node name="CloseButton" type="Button" parent="DebugPanel/Panel/VBox/Buttons"]
layout_mode = 2
text = "Close"
